css/style.scss
/* ... */
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .theme-btn,
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .theme-btn-s3,
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .theme-btn-s4,
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .view-cart-btn {
  background: #3757f7;
}

.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .theme-btn:hover,
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .theme-btn-s3:hover,
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .theme-btn-s4:hover,
.wpo-pricing-section .wpo-pricing-items .col:nth-child(3) .view-cart-btn:hover {
  background: #1534d0;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item {
  text-align: center;
  padding: 60px;
  box-shadow: 0px 2px 20px 0px rgba(62, 65, 159, 0.09);
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item h3 {
  font-size: 35px;
  font-family: "Futura PT Demi";
  margin-bottom: 20px;
}

@media (max-width: 767px) {
  .wpo-pricing-section .wpo-pricing-items .wpo-pricing-item h3 {
    font-size: 25px;
  }
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item .price-icon {
  margin-bottom: 5px;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item .price-icon .fi {
  font-size: 80px;
  color: #2c3587;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item .theme-btn,
.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item .theme-btn-s3,
.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item .theme-btn-s4,
.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item .view-cart-btn {
  margin-top: 40px;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item ul {
  list-style: none;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item ul li {
  padding: 20px 0;
  font-size: 18px;
  border-bottom: 1px solid #f2f2f2;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item ul li:last-child {
  border-bottom: 0;
  padding-bottom: 0;
}

.wpo-pricing-section .wpo-pricing-items .wpo-pricing-item ul li:first-child {
  padding-top: 0;
}

/* 3.6	wpo-fun-fact-section */
.wpo-fun-fact-section {
  text-align: center;
  background: #f4f8fc;
}

@media (max-width: 767px) {
  .wpo-fun-fact-section {
    padding-bottom: 30px;
  }
}

.wpo-fun-fact-section h2 {
  font-size: 30px;
  font-size: 2rem;
  font-weight: 600;
  margin: 0 0 1.8em;
}

@media (max-width: 991px) {
  .wpo-fun-fact-section h2 {
    font-size: 26px;
    font-size: 1.7333333333rem;
  }
}

@media (max-width: 767px) {
  .wpo-fun-fact-section h2 {
    font-size: 25px;
    font-size: 1.6666666667rem;
  }
}

.wpo-fun-fact-section .wpo-fun-fact-grids .grid {
  width: 25%;
  float: left;
}

@media (max-width: 767px) {
  .wpo-fun-fact-section .wpo-fun-fact-grids .grid {
    width: 50%;
    margin-bottom: 50px;
  }
}

.wpo-fun-fact-section .grid .number_h3 {
  font-size: 80px;
  font-size: 5.3333333333rem;
  font-weight: 900;
  color: #3757f7;
  margin: 0 0 0.2em;
  font-family: "Futura PT";
  display: flex;
  align-items: center;
  justify-content: center;
  -webkit-text-fill-color: #fff;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: #020202;
}

@media (max-width: 1200px) {
  .wpo-fun-fact-section .grid .number_h3 {
    font-size: 50px;
    ont-size: 3.3333333333rem;
  }
}

@media (max-width: 991px) {
  .wpo-fun-fact-section .grid .number_h3 {
    font-size: 40px;
    font-size: 2.6666666667rem;
  }
}

@media (max-width: 767px) {
  .wpo-fun-fact-section .grid .number_h3 {
    font-size: 35px;
    font-size: 2.3333333333rem;
  }
}

.wpo-fun-fact-section .grid:nth-child(1) .number_h3 {
  -webkit-text-stroke-color: #f28c8c;
}

.wpo-fun-fact-section .grid:nth-child(2) .number_h3 {
  -webkit-text-stroke-color: #01c2a9;
}

.wpo-fun-fact-section .grid:nth-child(3) .number_h3 {
  -webkit-text-stroke-color: #ffcd40;
}

.wpo-fun-fact-section .grid:nth-child(4) .number_h3 {
  -webkit-text-stroke-color: #3757f7;
}

.wpo-fun-fact-section .grid .number_h3+p {
  font-size: 30px;
  font-size: 2rem;
  margin: 0;
  color: #232f4b;
  font-family: "Futura PT";
}

@media (max-width: 1200px) {
  .wpo-fun-fact-section .grid .number_h3+p {
    font-size: 20px;
    font-size: 1.3333333333rem;
  }
}

@media (max-width: 991px) {
  .wpo-fun-fact-section .grid .number_h3+p {
    font-size: 16px;
    font-size: 1.0666666667rem;
  }
}

/* 3.7	wpo-gallery-section */
.wpo-gallery-section {
  padding: 100px;
}

@media (max-width: 1200px) {
  .wpo-gallery-section {
    padding: 100px 0;
  }
}

.wpo-gallery-section .wpo-section-title {
  text-align: left;
}

.wpo-gallery-section .wpo-section-title-button {
  text-align: right;
}

.wpo-gallery-section .wpo-section-title-button a {
  padding: 14px 35px;
  display: inline-block;
  border: 1px solid #3757f7;
  border-radius: 5px;
  color: #fff;
  background: #3757f7;
  text-transform: uppercase;
  font-size: 14px;
  font-size: 0.9333333333rem;
}

@media (max-width: 767px) {
  .wpo-gallery-section .wpo-section-title-button a {
    padding: 10px 20px;
  }
}

.wpo-gallery-section .wpo-section-title-button a:hover {
  background: #2743cc;
  color: #fff;
}

.wpo-gallery-section .wpo-gallery-container .grid {
  width: 25%;
  float: left;
  padding: 0 7.5px 15px;
}

.wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item {
  position: relative;
}

.wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item:before {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 0;
  content: "";
  background: rgba(55, 87, 247, 0.8);
  transition: all 0.3s;
}

.wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item:hover:before {
  height: 100%;
}

.wpo-gallery-section .wpo-gallery-container .grid .wpo-gallery-item:hover .wpo-gallery-text {
  opacity: 1;
  visibility: visible;
}

@media (max-width: 991px) {
  .wpo-gallery-section .wpo-gallery-container .grid {
    width: 50%;
  }
}

@media (max-width: 767px) {
  .wpo-gallery-section .wpo-gallery-container .grid {
    width: 50%;
  }
}
/* ... */

